docs/i18n/uk/docusaurus-plugin-content-docs/version-1.2/shortcuts.md
---
title: Гарячі клавіші
---

Є кілька ярликів, які можна використати в редакторі. Деякі з них пишуть під кнопками.

## Загальні налаштування

* `Ctrl` + `N`: новий файл
* `Ctrl` + `Shift` + `N`: новий файл з шаблону
* `Ctrl` + `O`: Відкрити файл
* `Ctrl` + `I`: Імпорт файлу
* `Ctrl` + `E`: Експорт файлу
* `Ctrl` + `Shift` + `E`: Експорт файлу як зображення
* `Ctrl` + `Alt` + `E`: Експорт файлу як svg
* `Ctrl` + `Alt` + `S`: Відкрити налаштування

## Проект

* `Ctrl` + `Z`: Скасувати
* `Ctrl` + `Y`: Redo
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Відкрити налаштування проекту
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Відкриття діалогового вікна кольорової палітри
* `Ctrl` + `B`: Відкритий фоновий діалог
* `Ctrl` + `L`: Відкритий діалог шарів
* `Ctrl` + `S`: змінити шлях
